added jacoco (#19)